k8s/redmine/kustomize-redmine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-service-redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-service-redmine
    spec:
      containers:
      - name: redmine
        image: docker.falinux.dev/services/falinux-redmine:latest
        imagePullPolicy: Always
        resources: 
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
          - mountPath: /mnt
            name: app-persistent-storage
          - name: local-timezone
            mountPath: "/etc/localtime"
            readOnly: true
          - name: app-rm-files-pv
            mountPath: "/bitnami"
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: falinux-docker-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: app-persistent-storage
          persistentVolumeClaim:
            claimName: rm-app-pvc
        - name: local-timezone
          hostPath:
            path: "/etc/localtime"
        - name: app-rm-files-pv
          persistentVolumeClaim:
            claimName: rm-app-files-pvc
