k8s/redmine/kustomize-redmine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: redmine
spec:
  type: ClusterIP
  selector:
    workload.user.cattle.io/workloadselector: deployment-service-redmine
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
